[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/Pipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/font_score.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 4 )
pipe_scene = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 433, 384 )
texture = ExtResource( 1 )

[node name="Ground" parent="." instance=ExtResource( 2 )]

[node name="Bird" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 428 )
z_index = 1

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" parent="." instance=ExtResource( 7 )]

[connection signal="hit" from="Ground" to="." method="_on_Ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_GameOver_restart"]
